<resources>
    <string name="app_name">Vendor</string>
    <!--for contacts-->
    <string name="cancel">Cancel</string>
    <string name="done">done</string>
    <string name="search">Search</string>
    <!--for head day of week-->
    <string name="_1th_of_week">SUN</string>
    <string name="_2th_of_week">MON</string>
    <string name="_3th_of_week">TUE</string>
    <string name="_4th_of_week">WED</string>
    <string name="_5th_of_week">TUR</string>
    <string name="_6th_of_week">FRI</string>
    <string name="_7th_of_week">SAT</string>
    <string name="saveStr">Save</string>
    <string name="cancelStr">Cancel</string>
    <string name="edit_timeslot_title">Edit TimeSlot</string>

    <string name="label_allday">All Day</string>
    <string name="label_hours">hrs</string>
    <string name="label_min">min</string>

    <string name="tomorrow">Tomorrow</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="no_event">No Event</string>
    <string name="duration">Duration</string>

    <string name="delete">Delete</string>
    <string name="edit">Edit</string>


</resources>
